fix: fixed gaps for desktop and mobile for second, third and txt container for both

--- a/css/logo_header.css
+++ b/css/logo_header.css
@@ -11,7 +11,7 @@
     width: 100%;
     z-index: 900;
     /* margin-top: 35px; */
-    padding: 16px 20px 0px 20px;
+    padding: 5px 20px 0px 20px;
     background: transparent;
     isolation: isolate;
     overflow: visible;
